:lipstick: Fix Animation and Fonts

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -72,6 +72,10 @@
 	color: #1a202c;
 }
 
+.html-tags {
+	font-family: "Tangerine", cursive !important;
+}
+
 .my_name {
 	font-family: "Lobster Two", cursive !important;
 	font-weight: 700;
