--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,50 +10,50 @@
 }
 
 #loader path:nth-child(1) {
-	stroke-dasharray: 407px;
-	stroke-dashoffset: 407px;
+	stroke-dasharray: 557px;
+	stroke-dashoffset: 557px;
 	animation: loader-animation 2s ease forwards;
 }
 
 #loader path:nth-child(2) {
-	stroke-dasharray: 338px;
-	stroke-dashoffset: 338px;
+	stroke-dasharray: 497px;
+	stroke-dashoffset: 497px;
 	animation: loader-animation 2s ease forwards 0.3s;
 }
 
 #loader path:nth-child(3) {
-	stroke-dasharray: 436px;
-	stroke-dashoffset: 436px;
+	stroke-dasharray: 336px;
+	stroke-dashoffset: 336px;
 	animation: loader-animation 2s ease forwards 0.6s;
 }
 
 #loader path:nth-child(4) {
-	stroke-dasharray: 629px;
-	stroke-dashoffset: 629px;
+	stroke-dasharray: 532px;
+	stroke-dashoffset: 532px;
 	animation: loader-animation 2s ease forwards 0.9s;
 }
 
 #loader path:nth-child(5) {
-	stroke-dasharray: 216px;
-	stroke-dashoffset: 216px;
+	stroke-dasharray: 265px;
+	stroke-dashoffset: 265px;
 	animation: loader-animation 2s ease forwards 1.2s;
 }
 
 #loader path:nth-child(6) {
-	stroke-dasharray: 464px;
-	stroke-dashoffset: 464px;
+	stroke-dasharray: 436px;
+	stroke-dashoffset: 436px;
 	animation: loader-animation 2s ease forwards 1.5s;
 }
 
 #loader path:nth-child(7) {
-	stroke-dasharray: 417px;
-	stroke-dashoffset: 417px;
+	stroke-dasharray: 372px;
+	stroke-dashoffset: 372px;
 	animation: loader-animation 2s ease forwards 1.8s;
 }
 
 #loader path:nth-child(8) {
-	stroke-dasharray: 495px;
-	stroke-dashoffset: 495px;
+	stroke-dasharray: 329px;
+	stroke-dashoffset: 329px;
 	animation: loader-animation 2s ease forwards 2.1s;
 }
 
@@ -256,5 +256,38 @@
 @keyframes loader-animation {
 	to {
 		stroke-dashoffset: 0;
+	}
+}
+
+@keyframes animate {
+	0%,
+	100% {
+		color: #e73c7e;
+		clip-path: polygon(
+			0% 45%,
+			16% 44%,
+			33% 50%,
+			54% 60%,
+			70% 61%,
+			84% 59%,
+			100% 52%,
+			100% 100%,
+			0% 100%
+		);
+	}
+
+	50% {
+		color: #23a6d5;
+		clip-path: polygon(
+			0% 60%,
+			15% 65%,
+			34% 66%,
+			51% 62%,
+			67% 50%,
+			84% 45%,
+			100% 46%,
+			100% 100%,
+			0% 100%
+		);
 	}
 }
