:bug: Fixing Bug

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -155,7 +155,7 @@
 
 .section-heading {
 	color: transparent;
-	background: linear-gradient(180deg, #e73c7e, #23a6d5, rgb(221, 155, 80), #cb7ceb);
+	background: linear-gradient(120deg, #23a6d5, #e73c7e, #d2eb7c);
 	animation: 8s text_gradient infinite linear;
 	-webkit-background-clip: text;
 	-moz-background-clip: text;
