--- a/styles/style.scss
+++ b/styles/style.scss
@@ -65,7 +65,7 @@
 	content: "";
 	position: absolute;
 	width: 100%;
-	height: 1.5px;
+	height: 2px;
 	bottom: 0;
 	left: 0;
 	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5) 0 0 / 400% 100%;
@@ -142,27 +142,32 @@
 	cursor: pointer;
 }
 
-.bouncy_anim,
-.section-heading {
-	display: inline-block;
-	cursor: pointer;
-}
+// .bouncy_anim:hover {
+// 	color: #cc2ed1;
+// 	transition: all 0.2s ease-in-out;
+// }
 
-.bouncy_anim:hover {
-	color: #cc2ed1;
-	transition: all 0.2s ease-in-out;
-}
+// .section-heading {
+// 	color: transparent;
+// 	background: linear-gradient(90deg, #11175c, #e73c7e);
+// 	animation: 8s text_gradient infinite linear;
+// 	-webkit-background-clip: text;
+// 	-moz-background-clip: text;
+// 	background-clip: text;
+// 	-webkit-text-fill-color: transparent;
+// 	letter-spacing: 1px;
+// }
 
-.section-heading {
-	color: transparent;
-	background: linear-gradient(120deg, #23a6d5, #e73c7e, #d2eb7c);
-	animation: 8s text_gradient infinite linear;
-	-webkit-background-clip: text;
-	-moz-background-clip: text;
-	background-clip: text;
-	-webkit-text-fill-color: transparent;
-	letter-spacing: 1px;
-}
+// .section-heading-dark {
+// 	color: transparent;
+// 	background: linear-gradient(90deg, #e73c7e, #d2eb7c);
+// 	animation: 8s text_gradient infinite linear;
+// 	-webkit-background-clip: text;
+// 	-moz-background-clip: text;
+// 	background-clip: text;
+// 	-webkit-text-fill-color: transparent;
+// 	letter-spacing: 1px;
+// }
 
 .desktop-navlink-light::after {
 	content: "";
